<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/blue">

    <EditText
        android:id="@+id/editText"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="162dp"
        android:ems="10"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:onClick="onClickEditTxt"
        android:text="@string/reg_no"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="38dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:onClick="onClickBtn"
        android:text="@string/calc"
        app:layout_constraintStart_toStartOf="@+id/editText"
        tools:layout_editor_absoluteY="38dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="234dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:editable="false"
        android:text="@string/inviteView"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:imeOptions="actionDone"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:layout_marginStart="32dp"
        android:buttonTint="@android:color/white"
        android:onClick="onClickCheck"
        android:text="@string/checkRange"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:onClick="onClickEditTxt2"
        android:text="@string/from"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginBottom="172dp"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:onClick="onClickEditTxt3"
        android:text="@string/to"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:drawableTint="@android:color/white"
        android:ems="10"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:onClick="onClickEditTxt4"
        android:text="@string/luckyNumbers"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:textColorHighlight="@android:color/white" />
</RelativeLayout>